test/arrays/deitz/part4/test_array_rankchange_error.chpl
var A: [1..5, 1..5] int;
writeln(A[1, 1..6]);
